--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ motor>=3.3.2
 pydantic>=2.5.3
 pydantic-settings>=2.1.0
 pymongo>=4.6.1
-python-dotenv==1.0.0 
+python-dotenv==1.0.0
+python-dateutil==2.8.2 
