--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,11 @@ pydantic>=2.5.3
 pydantic-settings>=2.1.0
 pymongo>=4.6.1
 python-dotenv==1.0.0
-python-dateutil==2.8.2 
+python-dateutil==2.8.2
+pytest>=8.0.0
+pytest-asyncio>=0.23.0
+pytest-cov>=4.1.0
+pytest-mock>=3.12.0
+black>=24.2.0
+flake8>=7.0.0
+mypy>=1.8.0 
