--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ black>=24.2.0
 flake8>=7.0.0
 mypy>=1.8.0
 httpx==0.27.0
-trafilatura>=1.6.0
+trafilatura>=1.5.0
 textstat>=0.7.3
 nltk>=3.8.1 
+langdetect>=1.0.9
